--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: car_app
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: /3P6bkwzsS4ALw5fXPhERpGHGwHJITBYmV/BbsVY+Gw
+      POSTGRES_PASSWORD: 1234
     volumes:
       - postgresdata:/var/lib/postgresql/data
     ports:
